# rytaine-leadai

./: .env.example  .gitignore  Makefile  README.md  railway.json
.github/workflows/: m0-2-supabase-smoke.yml  m0-6-isolation.yml  m0-7-integration.yml  m0-9-privilege-floor.yml  m1-0-lead-events.yml
docs/: M0-2-Environment-Setup-Guide.md  M0-3-Migrations-Runbook.md  M0-4-GRANTS-VALIDATION-REPORT.md  M0-4-RLS-Runbook.md  M0-4-VALIDATION-REPORT.md  M0-6-Isolation-Runbook.md  M0-6-VALIDATION-REPORT.md
scripts/: check_env.py  verify_m0_3.sql
services/api/: .env.example  Dockerfile  README.md  pyproject.toml
services/api/app/: main.py
services/api/app/api/: deps.py
services/api/app/api/v1/: router.py
services/api/app/api/v1/routes/: health.py  leads.py
services/api/app/core/: config.py  logging.py  security.py
services/api/app/db/: base.py  session.py  tenant.py
services/api/app/schemas/: auth.py  common.py  leads.py
services/api/tests/: conftest.py  test_config.py  test_health.py  test_security.py
services/api/tests/integration/: __init__.py  conftest.py  test_0019_privilege_floor.py  test_m1_0_lead_events.py  test_tenant_isolation.py
supabase/: config.toml  seed.sql
supabase/migrations/: 0001_extensions.sql  0002_enums.sql  0003_tenant_core.sql  0004_agent_layer.sql  0005_leads.sql  0009_rag.sql  (+14 more)
tests/: m0_4_rls.test.sql  m0_6_isolation.test.sql  m1_0_lead_events.test.sql  m1_1_source_connectors.test.sql
verification/: verify_0019_privilege_floor.sql  verify_m0_4.sql  verify_m0_4_grants.sql  verify_m0_5.sql  verify_m1_0.sql  verify_m1_1.sql
(+22 files in other folders)
